# win11-borderless-gaming-desktop

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: publish.yml
assets/: README.md
crates/win11-borderless-gaming-desktop/: Cargo.toml  build.rs
crates/win11-borderless-gaming-desktop/src/: app.rs
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
